<resources>

    <!-- app base -->
    <string name="app_name">breakout</string>
    <string name="app_name_dev">Ⓓbreakout</string>
    <string name="app_corps">ⓒbreakout</string>
    <string name="app_scheme">breakout</string>
    <string name="app_scheme_dev">tbreakout</string>


    <string name="notification_channel_01_id">channel_01</string>
    <string name="notification_channel_01_name">정보 알림</string>
    <string name="notification_channel_01_desc">정보 알림</string>


    <string name="nt_flash_title">GUE FLASH</string>
    <string name="nt_flash_on">Flash가 점등되었습니다.</string>
    <string name="hint_url">URL을 입력하세요.</string>


    <string name="login">"로그인"</string>
    <string name="terms_desc">첫 로그인 시 이용약관 및 개인정보처리방침의\n내용을 읽었으며, 이에 동의하는 것으로 간주합니다.</string>
    <string name="login_desc">잠시 후 팝업 화면에서 로그인에 사용할 계정을 선택해 주세요.</string>
    <string name="terms_desc_link01">이용약관</string>
    <string name="terms_desc_link02">개인정보처리방침</string>
    <string name="terms_service">서비스 이용약관</string>
    <string name="terms_privacy">개인정보 처리방침</string>


    <string name="update_notify">업데이트 알림</string>
    <string name="update">업데이트</string>
    <string name="exit">종료</string>
    <string name="do_next">다음에하기</string>


    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="retry">재시도</string>
    <string name="close">닫기</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="no_list">내역이 없습니다.</string>
    <string name="complete">완료</string>
    <string name="never_see_again">다시보지않기</string>
    <string name="never_see_aday">하루동안 보지 않기</string>

    <string name="nav_home">home</string>
    <string name="nav_guide">guide</string>
    <string name="nav_photo">photo</string>


    <!-- gue string-->
    <!--<string name="support_center">고객센터</string>
    <string name="join">회원가입</string>
    <string name="old_version">(구버전)</string>
    <string name="profile">프로필</string>
    <string name="or">OR</string>
    <string name="ok">확인</string>
    <string name="no">아니요</string>
    <string name="cancel">취소</string>
    <string name="edit">편집</string>
    <string name="retry">재시도</string>
    <string name="close">닫기</string>
    <string name="confirm">수락</string>
    <string name="del">삭제</string>
    <string name="agree">동의</string>
    <string name="select">선택</string>
    <string name="move">이동</string>
    <string name="save">저장</string>
    <string name="research">재검색</string>
    <string name="participation">참여</string>
    <string name="reject">거절</string>
    <string name="modify">수정</string>
    <string name="make">만들기</string>
    <string name="change">변경</string>
    <string name="recommend">추천하기</string>
    <string name="invite">초대하기</string>
    <string name="connect">연결하기</string>
    <string name="disconnect">연결끊기</string>
    <string name="refresh">새로고침</string>
    <string name="nick">닉네임</string>
    <string name="website">웹사이트</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="pw">비밀번호</string>
    <string name="pw_hint">비밀번호를 입력해 주세요.(6자이상)</string>
    <string name="pw_confirm">비밀번호확인</string>
    <string name="pw_confirm_hint">비밀번호를 재입력해 주세요.</string>
    <string name="pw_current_input_hint">현재 비밀번호를 입력해 주세요.</string>
    <string name="pw_change_hint1">새로운 비밀번호를 입력해 주세요. (6자 이상)</string>
    <string name="pw_change_hint2">새로운 비밀번호를 재입력해 주세요.</string>
    <string name="email">이메일</string>
    <string name="email_hint">이메일을 입력해 주세요.</string>
    <string name="phone_number">휴대폰번호</string>
    <string name="auth_numer">인증번호</string>
    <string name="regist">등록</string>
    <string name="registration">등록하기</string>
    <string name="block">차단</string>
    <string name="unblock">차단해제</string>
    <string name="terms_agree">동의하고 회원가입</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="use">사용</string>
    <string name="no_use">미사용</string>
    <string name="not_use">사용안함</string>
    <string name="home">집</string>
    <string name="office">회사</string>
    <string name="next_step">다음</string>
    <string name="open">공개</string>
    <string name="share">공유하기</string>
    <string name="title">제목</string>
    <string name="memo">메모</string>
    <string name="tag">태그</string>
    <string name="more">더보기</string>
    <string name="start_app">시작하기</string>
    <string name="menu_exit">나가기</string>
    <string name="menu_settings">설정</string>
    <string name="open_url">링크 열기</string>
    <string name="copy_url">링크 복사</string>
    <string name="setting">설정</string>
    <string name="support_user">고객지원</string>
    <string name="support_center_call">고객센터 ☎ 1588&#8211;1588</string>
    <string name="cs_call_number">1588&#8211;1588</string>
    <string name="al_support_center_call">고객센터로 전화를 거시겠습니까?</string>-->

</resources>