<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.breakout.sample.component.navigation.NavigationFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/navigation_f" />

    <fragment
        android:id="@+id/nav_guide"
        android:name="com.breakout.sample.component.navigation.NavigationFragment"
        android:label="@string/nav_guide"
        tools:layout="@layout/navigation_f" />

    <fragment
        android:id="@+id/nav_photo"
        android:name="com.breakout.sample.component.navigation.NavigationFragment"
        android:label="@string/nav_photo"
        tools:layout="@layout/navigation_f" />

</navigation>