<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_round_white"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@null"
                android:padding="10dp"
                android:src="@drawable/ic_close_gray"
                android:visibility="gone"
                tools:visibility="visible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="27dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/bt_flash_off" />

            <TextView
                android:id="@+id/tvTermsDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/terms_desc"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_normal"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvLoginDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/login_desc"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_small"
                android:visibility="visible"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/llCount"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/circle_black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/circle_black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/circle_black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/circle_black" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cbCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/never_see_aday"
                android:textColor="@color/black"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>


        <Button
            android:id="@+id/ibLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/google_login" />
    </LinearLayout>
</LinearLayout>


